--- a/reservas.html
+++ b/reservas.html
@@ -26,12 +26,10 @@
         <form class="formulario-reserva" action="#" method="POST">
             <div class="campo">
                 <label for="nome">Nome Completo:</label>
-                <input type="text" id="nome" name="nome" placeholder="Ex: João Silva" required>
-            </div>
+                <input type="text" id="nome </div>
             <div class="campo">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="exemplo@dominio.com" required>
-            </div>
+                <input type="email" id="email" name="email" placeholde </div>
             <div class="campo">
                 <label for="data">Data da Reserva:</label>
                 <input type="date" id="data" name="data" required>
@@ -42,8 +40,7 @@
             </div>
             <div class="campo">
                 <label for="pessoas">Nº de Pessoas:</label>
-                <input type="number" id="pessoas" name="pessoas" min="1" max="50" placeholder="Mín. 1 / Máx. 50" required>
-            </div>
+                <input type="number" id="pessoas" name="pessoas" min="1" max="50" placeholder= </div>
             <button type="submit" class="btn-reservar">CONFIRMAR RESERVA</button>
         </form>
 
