--- a/reservas.html
+++ b/reservas.html
@@ -62,7 +62,7 @@
                 <tbody>
                     <tr><td>9</td><td>Arlete Alexandre</td></tr>
                     <tr><td>10</td><td>Belo Ernesto Muavirela</td></tr>
-                    <tr><td>14</td><td>Cheldrean da Clarice</td></tr>
+                    <tr><td>14</td><td>Cheldern da Clarice</td></tr>
                     <tr><td>18</td><td>Cristina Taibo Muarabo</td></tr>
                     <tr><td>23</td><td>Edgar dos Messias Aduzindo</td></tr>
                     <tr><td>25</td><td>Elianai Florentino da Costa</td></tr>
